Updated a place
